# OXDeepNN

./: CMakeLists.txt  README.md
ctest/: CMakeLists.txt  perceptron.cpp
demo/: CMakeLists.txt
demo/MLPerceptron/: CMakeLists.txt  MLPerceptron.cpp
demo/Perceptron/: CMakeLists.txt  RosenPerceptron.cpp
demo/perceptron/: CMakeLists.txt  RosenPerceptron.cpp
doc/: CMakeLists.txt
include/: CMakeLists.txt
include/Eigen/: CMakeLists.txt
include/OXDeepNN/: Activatefunction.h  ArtificialNeure.h  CMakeLists.txt  Enumeration.h  Macros.h  NetTopology.h
include/OXDeepNN/QTplot/: CMakeLists.txt
include/OXDeepNN/layers/: HiddenLayer.h  InputLayer.h  NeureLayer.h  OutputLayer.h
include/OXDeepNN/solver/: LMSsolver.h  Perceptronsolver.h
lib/: CMakeLists.txt
lib/lib-linux/: CMakeLists.txt
lib/lib-linux/libGSL/: libgslcblas.so.0.0.0
lib/lib-linux/libqcustomplot/: libqcustomplot.so.2.0.0
lib/lib-mac/: CMakeLists.txt
lib/lib-mac/libGSL/: libgsl.19.dylib  libgslcblas.0.dylib
lib/lib-mac/libqcustomplot/: libqcustomplot.2.0.0.dylib  libqcustomplotd.2.0.0.dylib
lib/lib-windows/libGSL/: CMakeLists.txt  libgsl-19.lib  libgslcblas-0.lib
lib/lib-windows/libqcustomplot/: qcustomplot2.lib  qcustomplotd2.lib
python/: CMakeLists.txt
qcustomplot/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/layers/: InputLayer.cpp
src/: Activatefunction.h  ArtificialNeure.h  CMakeLists.txt  Enumeration.h  Macros.h  main.cpp
src/layers/: HiddenLayer.cpp  NeureLayer.cpp  OutputLayer.cpp
src/solver/: LMSsolver.cpp  Perceptronsolver.cpp
tests/: CMakeLists.txt
tests/Perceptron/: CMakeLists.txt  perceptron.cpp
